--- a/vite-project/src/components/Cart.css
+++ b/vite-project/src/components/Cart.css
@@ -1,23 +1,49 @@
-.empty-cart button{
+#empty-button{
     padding: 20px 30px;
 display: block;
 margin: auto;
+background-color: rgb(255, 238, 47);
+border-radius: 10px;
+width: 400px;
+}
+#empty-button a{
+    font-weight: bold;
+    font-size: 30px;
+    color: rgb(248, 4, 126);
 
+}
+#empty-button:hover{
+    display: block;
+    box-shadow: 10px 10px rgb(140, 140, 5);
 }
 
 .empty-cart{
     position: relative;
     top: 150px;
 }
-button a, button a:hover, button a:visited, button a:visited:hover{
-    font-size: 20px;
-    color: white;
-}
+
 h2{
     text-align: center;
     padding: 30px;
 }
-.cart-title{
-    position: absolute;
-    top: 100px;
+#cart-title{
+    position: relative;
+    top: 50px;
+}
+#total{
+    margin: 50px;
+    font-size: 50px;
+}
+
+#remove{
+    font-size: 12px;
+    width: 140px;
+    padding: 5px;
+    margin:  10px auto;
+    
+}
+
+#full-cart{
+    margin: 10%;
+    text-align: center;
 }
