--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,15 +1,14 @@
-*{
+* {
     padding: 0;
     margin: 0;
-    
 }
 
 img {
     width: 80%;
 }
 
-header{
-    background-color: white;
+header {
+    background-color: rgb(248, 248, 226);
     position: fixed;
     width: 90%;
     padding-left: 5%;
@@ -17,26 +16,27 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: black;
-    top:0px;
+    color: rgb(41, 36, 36);
+    top: 0px;
     padding-top: 10px;
     padding-bottom: 10px;
-    z-index: 100;
-
+    z-index: 10000;
 }
-nav{
+
+nav {
     display: flex;
     gap: 30px;
 }
 
-nav a{
+nav a {
     color: rgb(248, 4, 126);
 }
 
-nav a:hover, nav a:visited:hover{
+nav a:hover,
+nav a:visited:hover {
     color: rgb(248, 135, 197);
 }
 
-nav a:visited{
+nav a:visited {
     color: rgb(210, 0, 126);
 }
