--- a/vite-project/src/components/Cart.css
+++ b/vite-project/src/components/Cart.css
@@ -12,7 +12,7 @@ width: 400px;
     color: rgb(248, 4, 126);
 
 }
-#empty-button:hover{
+#empty-button:hover, #checkout:hover{
     display: block;
     box-shadow: 10px 10px rgb(140, 140, 5);
 }
@@ -31,19 +31,41 @@ h2{
     top: 50px;
 }
 #total{
-    margin: 50px;
+    margin-top: 50px;
+    margin-bottom: 15px;
     font-size: 50px;
 }
 
 #remove{
     font-size: 12px;
-    width: 140px;
-    padding: 5px;
+    padding: 10px 15px;
     margin:  10px auto;
+    font-size: 12px;
+    border: none;
+    border-radius: 5px;
+    background-color: #08a908;
+    font-weight: bolder;
+    display: block;
+    z-index: 1000;
+    position: relative;
     
 }
 
 #full-cart{
     margin: 10%;
     text-align: center;
+}
+
+#checkout{
+    margin: auto;
+    background-color: rgb(255, 238, 47);
+    color: rgb(248, 4, 126);
+    border: none;
+    border-radius: 10px;
+    font-weight: bolder;
+    display: block;
+    z-index: 1000;
+    position: relative;
+    font-size: 40px;
+    padding: 20px;
 }
