--- a/vite-project/src/components/EventPage.css
+++ b/vite-project/src/components/EventPage.css
@@ -1,55 +1,72 @@
-* {
-}
-
 img {
     width: 100%;
     max-width: 700px;
     display: block;
     margin: auto;
+    z-index: 0;
 }
-.event-page{
+
+.event-page {
     position: relative;
-    top: 100px;
+    /* top: 140px; */
     padding: 0% 10%;
 }
 
-h2{
+h2 {
     font-size: 50px;
     color: rgb(248, 4, 126);
 }
-#add{
+
+#add {
     position: relative;
     left: 10px;
 }
-p{
-    font-size: 20px;
-}
 
-.date-and-time, .price-and-place{
+.descrip p{
+    font-size: 20px;
+    color: rgb(248, 248, 226);
+}
+.event-info{
+
+}
+.date-and-time,
+.price-and-place {
     display: flex;
     width: 100%;
     justify-content: space-between;
-}
-
-.date-and-time{
-    padding-bottom: 50px;
-}
-.event-info p{
     font-size: 25px;
     color: yellow;
+    margin-top: 20px;
 }
 
-button{
+#event-title{
+    font-size: 9vw;
+    z-index: 1;
+    position: relative;
+    top: 60px;
+    text-align: center;
+    text-shadow: 3px 3px rgb(248, 248, 226);
+    font-style: italic;
+    line-height: 70px;
+}
+.btn {
     padding: 15px;
     font-size: 20px;
     border: none;
     border-radius: 5px;
-    background-color: #11fc11aa;
+    background-color: #08a908;
     width: 200px;
     font-weight: bolder;
-    margin-bottom: 40px;
+    margin: -20px  auto 20px auto;
     display: block;
+    z-index: 1000;
+    position: relative;
 }
-button:hover{
-    box-shadow: 6px 6px rgb(12, 140, 5);
+
+button:hover {
+    box-shadow: 6px 6px rgb(9, 123, 3);
+}
+
+footer{
+    height: 50px;
 }
