--- a/vite-project/src/components/Catalog.css
+++ b/vite-project/src/components/Catalog.css
@@ -18,8 +18,8 @@ hr{
 
 #title{
     position: relative;
-    padding: 90px 0px 0px 70px;
-    font-size: 75px;
+    padding: 90px  0px 0px 10%;
+    font-size: 10vw;
 
 }
 
