--- a/src/components/Catalog.css
+++ b/src/components/Catalog.css
@@ -20,7 +20,7 @@ hr{
     position: relative;
     padding: 90px  0px 0px 10%;
     font-size: 10vw;
-
+    color: rgb(248, 248, 226);
 }
 
 .catalog-add {
