--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -1,45 +1,51 @@
-#empty-button{
+#empty-button {
     padding: 20px 30px;
-display: block;
-margin: auto;
-background-color: rgb(255, 238, 47);
-border-radius: 10px;
-width: 400px;
+    display: block;
+    margin: auto;
+    background-color: rgb(255, 238, 47);
+    border-radius: 10px;
+    width: 400px;
+    border: none;
 }
-#empty-button a{
+
+#empty-button a {
     font-weight: bold;
     font-size: 30px;
     color: rgb(248, 4, 126);
 
 }
-#empty-button:hover, #checkout:hover{
+
+#empty-button:hover,
+#checkout:hover {
     display: block;
     box-shadow: 10px 10px rgb(140, 140, 5);
 }
 
-.empty-cart{
+.empty-cart {
     position: relative;
     top: 150px;
 }
 
-h2{
+h2 {
     text-align: center;
     padding: 30px;
 }
-#cart-title{
+
+#cart-title {
     position: relative;
     top: 50px;
 }
-#total{
+
+#total {
     margin-top: 50px;
     margin-bottom: 15px;
     font-size: 50px;
 }
 
-#remove{
+#remove {
     font-size: 12px;
     padding: 10px 15px;
-    margin:  10px auto;
+    margin: 10px auto;
     font-size: 12px;
     border: none;
     border-radius: 5px;
@@ -48,15 +54,15 @@ h2{
     display: block;
     z-index: 1000;
     position: relative;
-    
+
 }
 
-#full-cart{
+#full-cart {
     margin: 10%;
     text-align: center;
 }
 
-#checkout{
+#checkout {
     margin: auto;
     background-color: rgb(255, 238, 47);
     color: rgb(248, 4, 126);
