--- a/src/components/EventPage.css
+++ b/src/components/EventPage.css
@@ -8,13 +8,13 @@ img {
 
 .event-page {
     position: relative;
-    /* top: 140px; */
     padding: 0% 10%;
 }
 
 h2 {
     font-size: 50px;
     color: rgb(248, 4, 126);
+    line-height: 50px;
 }
 
 #add {
@@ -47,7 +47,7 @@ h2 {
     text-align: center;
     text-shadow: 3px 3px rgb(248, 248, 226);
     font-style: italic;
-    line-height: 70px;
+    line-height: 60%;
 }
 .btn {
     padding: 15px;
